--- a/main.html
+++ b/main.html
@@ -1,16 +1,83 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MyBookList</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
+  <style>
+    h1 {
+      text-align: center;
+      margin: 40px 0;
+      font-size: 3rem;
+      font-weight: 300;
+    }
+    h1 span {
+      color: #007bff;
+      font-weight: 500;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container">
+    <h1>My<span>Book</span>List</h1>
 
+    <div class="form-group mb-3">
+      <input type="text" id="title" class="form-control mb-2" placeholder="Title">
+      <input type="text" id="author" class="form-control mb-2" placeholder="Author">
+      <input type="text" id="isbn" class="form-control mb-3" placeholder="ISBN#">
+      <button id="submit" class="btn btn-primary">Add Book</button>
+    </div>
+
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>ISBN#</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody id="book-list"></tbody>
+    </table>
+  </div>
+
+  <script>
+    document.getElementById('submit').addEventListener('click', function() {
+      const title = document.getElementById('title').value.trim();
+      const author = document.getElementById('author').value.trim();
+      const isbn = document.getElementById('isbn').value.trim();
+
+      if (title === '' || author === '' || isbn === '') {
+        alert('Please fill in all fields');
+        return;
+      }
+
+      const list = document.getElementById('book-list');
+      const row = document.createElement('tr');
+
+      row.innerHTML = `
+        <td>${title}</td>
+        <td>${author}</td>
+        <td>${isbn}</td>
+        <td><button class="btn btn-danger btn-sm delete">Clear</button></td>
+      `;
+
+      list.appendChild(row);
+
+      document.getElementById('title').value = '';
+      document.getElementById('author').value = '';
+      document.getElementById('isbn').value = '';
+    });
+
+    document.getElementById('book-list').addEventListener('click', function(e) {
+      if (e.target.classList.contains('delete')) {
+        e.target.parentElement.parentElement.remove();
+      }
+    });
+  </script>
 </body>
-
 </html>
